// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for open: false, backdrop: canvas, fullscreen: 'blur', dismissButton: false, hasHeader: true and hasFooter: false 1`] = `
":host {
  display: contents;
  --ref-p-modal-pt: clamp(16px, 1.25vw + 12px, 36px) !important;
  --ref-p-modal-pb: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) !important;
  --ref-p-modal-px: clamp(32px, 2.75vw + 23px, 76px) !important;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  --_a: var(--p-color-canvas) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: hidden;
  pointer-events: none;
  background: transparent;
  transition: visibility 0s linear var(--p-transition-duration, .4s), background-color var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), -webkit-backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, .4s), background-color var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), -webkit-backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), overlay var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  position: relative;
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-top: clamp(16px, 1.25vw + 12px, 36px);
  padding-bottom: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: var(--p-color-primary);
  background: var(--_a);
  opacity: 0;
  transform: translateY(25vh);
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), transform var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  width: var(--p-modal-width,auto);
  min-width: 276px;
  max-width: 1535.5px;
  place-self: center;
  margin: var(--p-modal-spacing-top,clamp(16px, 10vh, 192px)) max(22px, 10.625vw - 12px) var(--p-modal-spacing-bottom,clamp(16px, 10vh, 192px));
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-xl));
}
.modal:dir(rtl) {
  transform: translateY(25vh);
}
.dismiss {
  grid-area: 1/3;
  z-index: 5;
  position: sticky;
  top: clamp(8px, 0.5vw + 6px, 16px);
  margin-top: calc(-1 * clamp(16px, 1.25vw + 12px, 36px) + clamp(8px, 0.5vw + 6px, 16px));
  margin-inline-end: clamp(8px, 0.5vw + 6px, 16px);
  place-self: flex-start flex-end;
}
.dismiss::after {
  content: "";
  display: block;
  position: absolute;
  inset: calc(-1 * clamp(8px, 0.5vw + 6px, 16px)) calc(-1 * clamp(8px, 0.5vw + 6px, 16px)) -50px -50px;
  pointer-events: none;
  z-index: -1;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-xl));
  background: radial-gradient(circle at top right, hsla(from var(--_a) h s l / 0.35) 0%, transparent 70%);
}
@media (forced-colors: active) {
  .modal {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for open: false, backdrop: canvas, fullscreen: 'blur', dismissButton: true, hasHeader: true and hasFooter: false 1`] = `
":host {
  display: contents;
  --ref-p-modal-pt: clamp(16px, 1.25vw + 12px, 36px) !important;
  --ref-p-modal-pb: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) !important;
  --ref-p-modal-px: clamp(32px, 2.75vw + 23px, 76px) !important;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  --_a: var(--p-color-canvas) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: hidden;
  pointer-events: none;
  background: transparent;
  transition: visibility 0s linear var(--p-transition-duration, .4s), background-color var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), -webkit-backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, .4s), background-color var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), -webkit-backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), overlay var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  position: relative;
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-top: clamp(16px, 1.25vw + 12px, 36px);
  padding-bottom: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: var(--p-color-primary);
  background: var(--_a);
  opacity: 0;
  transform: translateY(25vh);
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), transform var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  width: auto;
  min-width: auto;
  max-width: none;
  place-self: stretch;
  margin: 0;
  border-radius: 0;
}
.modal:dir(rtl) {
  transform: translateY(25vh);
}
.dismiss {
  grid-area: 1/3;
  z-index: 5;
  position: sticky;
  top: clamp(8px, 0.5vw + 6px, 16px);
  margin-top: calc(-1 * clamp(16px, 1.25vw + 12px, 36px) + clamp(8px, 0.5vw + 6px, 16px));
  margin-inline-end: clamp(8px, 0.5vw + 6px, 16px);
  place-self: flex-start flex-end;
}
.dismiss::after {
  content: "";
  display: block;
  position: absolute;
  inset: calc(-1 * clamp(8px, 0.5vw + 6px, 16px)) calc(-1 * clamp(8px, 0.5vw + 6px, 16px)) -50px -50px;
  pointer-events: none;
  z-index: -1;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-xl));
  background: radial-gradient(circle at top right, hsla(from var(--_a) h s l / 0.35) 0%, transparent 70%);
}"
`;

exports[`getComponentCss() > should return correct css for open: false, backdrop: canvas, fullscreen: 'blur', dismissButton: true, hasHeader: true and hasFooter: false 2`] = `
":host {
  display: contents;
  --ref-p-modal-pt: clamp(16px, 1.25vw + 12px, 36px) !important;
  --ref-p-modal-pb: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) !important;
  --ref-p-modal-px: clamp(32px, 2.75vw + 23px, 76px) !important;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  --_a: var(--p-color-canvas) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: hidden;
  pointer-events: none;
  background: transparent;
  transition: visibility 0s linear var(--p-transition-duration, .4s), background-color var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), -webkit-backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, .4s), background-color var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), -webkit-backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), overlay var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  position: relative;
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-top: clamp(16px, 1.25vw + 12px, 36px);
  padding-bottom: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: var(--p-color-primary);
  background: var(--_a);
  opacity: 0;
  transform: translateY(25vh);
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), transform var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  width: auto;
  min-width: auto;
  max-width: none;
  place-self: stretch;
  margin: 0;
  border-radius: 0;
}
.modal:dir(rtl) {
  transform: translateY(25vh);
}
.dismiss {
  grid-area: 1/3;
  z-index: 5;
  position: sticky;
  top: clamp(8px, 0.5vw + 6px, 16px);
  margin-top: calc(-1 * clamp(16px, 1.25vw + 12px, 36px) + clamp(8px, 0.5vw + 6px, 16px));
  margin-inline-end: clamp(8px, 0.5vw + 6px, 16px);
  place-self: flex-start flex-end;
}
.dismiss::after {
  content: "";
  display: block;
  position: absolute;
  inset: calc(-1 * clamp(8px, 0.5vw + 6px, 16px)) calc(-1 * clamp(8px, 0.5vw + 6px, 16px)) -50px -50px;
  pointer-events: none;
  z-index: -1;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-xl));
  background: radial-gradient(circle at top right, hsla(from var(--_a) h s l / 0.35) 0%, transparent 70%);
}"
`;

exports[`getComponentCss() > should return correct css for open: false, backdrop: canvas, fullscreen: 'shading', dismissButton: false, hasHeader: true and hasFooter: false 1`] = `
":host {
  display: contents;
  --ref-p-modal-pt: clamp(16px, 1.25vw + 12px, 36px) !important;
  --ref-p-modal-pb: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) !important;
  --ref-p-modal-px: clamp(32px, 2.75vw + 23px, 76px) !important;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  --_a: var(--p-color-canvas) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: hidden;
  pointer-events: none;
  background: transparent;
  transition: visibility 0s linear var(--p-transition-duration, .4s), background-color var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), -webkit-backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, .4s), background-color var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), -webkit-backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), overlay var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  position: relative;
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-top: clamp(16px, 1.25vw + 12px, 36px);
  padding-bottom: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: var(--p-color-primary);
  background: var(--_a);
  opacity: 0;
  transform: translateY(25vh);
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), transform var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  width: var(--p-modal-width,auto);
  min-width: 276px;
  max-width: 1535.5px;
  place-self: center;
  margin: var(--p-modal-spacing-top,clamp(16px, 10vh, 192px)) max(22px, 10.625vw - 12px) var(--p-modal-spacing-bottom,clamp(16px, 10vh, 192px));
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-xl));
}
.modal:dir(rtl) {
  transform: translateY(25vh);
}
.dismiss {
  grid-area: 1/3;
  z-index: 5;
  position: sticky;
  top: clamp(8px, 0.5vw + 6px, 16px);
  margin-top: calc(-1 * clamp(16px, 1.25vw + 12px, 36px) + clamp(8px, 0.5vw + 6px, 16px));
  margin-inline-end: clamp(8px, 0.5vw + 6px, 16px);
  place-self: flex-start flex-end;
}
.dismiss::after {
  content: "";
  display: block;
  position: absolute;
  inset: calc(-1 * clamp(8px, 0.5vw + 6px, 16px)) calc(-1 * clamp(8px, 0.5vw + 6px, 16px)) -50px -50px;
  pointer-events: none;
  z-index: -1;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-xl));
  background: radial-gradient(circle at top right, hsla(from var(--_a) h s l / 0.35) 0%, transparent 70%);
}
@media (forced-colors: active) {
  .modal {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for open: false, backdrop: canvas, fullscreen: 'shading', dismissButton: true, hasHeader: true and hasFooter: false 1`] = `
":host {
  display: contents;
  --ref-p-modal-pt: clamp(16px, 1.25vw + 12px, 36px) !important;
  --ref-p-modal-pb: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) !important;
  --ref-p-modal-px: clamp(32px, 2.75vw + 23px, 76px) !important;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  --_a: var(--p-color-canvas) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: hidden;
  pointer-events: none;
  background: transparent;
  transition: visibility 0s linear var(--p-transition-duration, .4s), background-color var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), -webkit-backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, .4s), background-color var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), -webkit-backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), overlay var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  position: relative;
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-top: clamp(16px, 1.25vw + 12px, 36px);
  padding-bottom: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: var(--p-color-primary);
  background: var(--_a);
  opacity: 0;
  transform: translateY(25vh);
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), transform var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  width: auto;
  min-width: auto;
  max-width: none;
  place-self: stretch;
  margin: 0;
  border-radius: 0;
}
.modal:dir(rtl) {
  transform: translateY(25vh);
}
.dismiss {
  grid-area: 1/3;
  z-index: 5;
  position: sticky;
  top: clamp(8px, 0.5vw + 6px, 16px);
  margin-top: calc(-1 * clamp(16px, 1.25vw + 12px, 36px) + clamp(8px, 0.5vw + 6px, 16px));
  margin-inline-end: clamp(8px, 0.5vw + 6px, 16px);
  place-self: flex-start flex-end;
}
.dismiss::after {
  content: "";
  display: block;
  position: absolute;
  inset: calc(-1 * clamp(8px, 0.5vw + 6px, 16px)) calc(-1 * clamp(8px, 0.5vw + 6px, 16px)) -50px -50px;
  pointer-events: none;
  z-index: -1;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-xl));
  background: radial-gradient(circle at top right, hsla(from var(--_a) h s l / 0.35) 0%, transparent 70%);
}"
`;

exports[`getComponentCss() > should return correct css for open: false, backdrop: canvas, fullscreen: 'shading', dismissButton: true, hasHeader: true and hasFooter: false 2`] = `
":host {
  display: contents;
  --ref-p-modal-pt: clamp(16px, 1.25vw + 12px, 36px) !important;
  --ref-p-modal-pb: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) !important;
  --ref-p-modal-px: clamp(32px, 2.75vw + 23px, 76px) !important;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  --_a: var(--p-color-canvas) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: hidden;
  pointer-events: none;
  background: transparent;
  transition: visibility 0s linear var(--p-transition-duration, .4s), background-color var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), -webkit-backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, .4s), background-color var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), -webkit-backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), overlay var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  position: relative;
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-top: clamp(16px, 1.25vw + 12px, 36px);
  padding-bottom: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: var(--p-color-primary);
  background: var(--_a);
  opacity: 0;
  transform: translateY(25vh);
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), transform var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  width: auto;
  min-width: auto;
  max-width: none;
  place-self: stretch;
  margin: 0;
  border-radius: 0;
}
.modal:dir(rtl) {
  transform: translateY(25vh);
}
.dismiss {
  grid-area: 1/3;
  z-index: 5;
  position: sticky;
  top: clamp(8px, 0.5vw + 6px, 16px);
  margin-top: calc(-1 * clamp(16px, 1.25vw + 12px, 36px) + clamp(8px, 0.5vw + 6px, 16px));
  margin-inline-end: clamp(8px, 0.5vw + 6px, 16px);
  place-self: flex-start flex-end;
}
.dismiss::after {
  content: "";
  display: block;
  position: absolute;
  inset: calc(-1 * clamp(8px, 0.5vw + 6px, 16px)) calc(-1 * clamp(8px, 0.5vw + 6px, 16px)) -50px -50px;
  pointer-events: none;
  z-index: -1;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-xl));
  background: radial-gradient(circle at top right, hsla(from var(--_a) h s l / 0.35) 0%, transparent 70%);
}"
`;

exports[`getComponentCss() > should return correct css for open: false, backdrop: surface, fullscreen: 'blur', dismissButton: false, hasHeader: false and hasFooter: true 1`] = `
":host {
  display: contents;
  --ref-p-modal-pt: clamp(16px, 1.25vw + 12px, 36px) !important;
  --ref-p-modal-pb: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) !important;
  --ref-p-modal-px: clamp(32px, 2.75vw + 23px, 76px) !important;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  --_a: var(--p-color-surface) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=header] {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: hidden;
  pointer-events: none;
  background: transparent;
  transition: visibility 0s linear var(--p-transition-duration, .4s), background-color var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), -webkit-backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, .4s), background-color var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), -webkit-backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), overlay var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  position: relative;
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-top: clamp(16px, 1.25vw + 12px, 36px);
  padding-bottom: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: var(--p-color-primary);
  background: var(--_a);
  opacity: 0;
  transform: translateY(25vh);
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), transform var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  width: var(--p-modal-width,auto);
  min-width: 276px;
  max-width: 1535.5px;
  place-self: center;
  margin: var(--p-modal-spacing-top,clamp(16px, 10vh, 192px)) max(22px, 10.625vw - 12px) var(--p-modal-spacing-bottom,clamp(16px, 10vh, 192px));
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-xl));
}
.modal:dir(rtl) {
  transform: translateY(25vh);
}
@media (forced-colors: active) {
  .modal {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for open: false, backdrop: surface, fullscreen: 'blur', dismissButton: false, hasHeader: true and hasFooter: true 1`] = `
":host {
  display: contents;
  --ref-p-modal-pt: clamp(16px, 1.25vw + 12px, 36px) !important;
  --ref-p-modal-pb: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) !important;
  --ref-p-modal-px: clamp(32px, 2.75vw + 23px, 76px) !important;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  --_a: var(--p-color-surface) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=header] {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: hidden;
  pointer-events: none;
  background: transparent;
  transition: visibility 0s linear var(--p-transition-duration, .4s), background-color var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), -webkit-backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, .4s), background-color var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), -webkit-backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), overlay var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  position: relative;
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-top: clamp(16px, 1.25vw + 12px, 36px);
  padding-bottom: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: var(--p-color-primary);
  background: var(--_a);
  opacity: 0;
  transform: translateY(25vh);
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), transform var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  width: var(--p-modal-width,auto);
  min-width: 276px;
  max-width: 1535.5px;
  place-self: center;
  margin: var(--p-modal-spacing-top,clamp(16px, 10vh, 192px)) max(22px, 10.625vw - 12px) var(--p-modal-spacing-bottom,clamp(16px, 10vh, 192px));
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-xl));
}
.modal:dir(rtl) {
  transform: translateY(25vh);
}
.dismiss {
  grid-area: 1/3;
  z-index: 5;
  position: sticky;
  top: clamp(8px, 0.5vw + 6px, 16px);
  margin-top: calc(-1 * clamp(16px, 1.25vw + 12px, 36px) + clamp(8px, 0.5vw + 6px, 16px));
  margin-inline-end: clamp(8px, 0.5vw + 6px, 16px);
  place-self: flex-start flex-end;
}
.dismiss::after {
  content: "";
  display: block;
  position: absolute;
  inset: calc(-1 * clamp(8px, 0.5vw + 6px, 16px)) calc(-1 * clamp(8px, 0.5vw + 6px, 16px)) -50px -50px;
  pointer-events: none;
  z-index: -1;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-xl));
  background: radial-gradient(circle at top right, hsla(from var(--_a) h s l / 0.35) 0%, transparent 70%);
}
@media (forced-colors: active) {
  .modal {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for open: false, backdrop: surface, fullscreen: 'blur', dismissButton: true, hasHeader: false and hasFooter: false 1`] = `
":host {
  display: contents;
  --ref-p-modal-pt: clamp(16px, 1.25vw + 12px, 36px) !important;
  --ref-p-modal-pb: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) !important;
  --ref-p-modal-px: clamp(32px, 2.75vw + 23px, 76px) !important;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  --_a: var(--p-color-surface) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: hidden;
  pointer-events: none;
  background: transparent;
  transition: visibility 0s linear var(--p-transition-duration, .4s), background-color var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), -webkit-backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, .4s), background-color var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), -webkit-backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), overlay var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  position: relative;
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-top: clamp(16px, 1.25vw + 12px, 36px);
  padding-bottom: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: var(--p-color-primary);
  background: var(--_a);
  opacity: 0;
  transform: translateY(25vh);
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), transform var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  width: auto;
  min-width: auto;
  max-width: none;
  place-self: stretch;
  margin: 0;
  border-radius: 0;
}
.modal:dir(rtl) {
  transform: translateY(25vh);
}"
`;

exports[`getComponentCss() > should return correct css for open: false, backdrop: surface, fullscreen: 'blur', dismissButton: true, hasHeader: false and hasFooter: true 1`] = `
":host {
  display: contents;
  --ref-p-modal-pt: clamp(16px, 1.25vw + 12px, 36px) !important;
  --ref-p-modal-pb: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) !important;
  --ref-p-modal-px: clamp(32px, 2.75vw + 23px, 76px) !important;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  --_a: var(--p-color-surface) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=header] {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: hidden;
  pointer-events: none;
  background: transparent;
  transition: visibility 0s linear var(--p-transition-duration, .4s), background-color var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), -webkit-backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, .4s), background-color var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), -webkit-backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), overlay var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  position: relative;
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-top: clamp(16px, 1.25vw + 12px, 36px);
  padding-bottom: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: var(--p-color-primary);
  background: var(--_a);
  opacity: 0;
  transform: translateY(25vh);
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), transform var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  width: auto;
  min-width: auto;
  max-width: none;
  place-self: stretch;
  margin: 0;
  border-radius: 0;
}
.modal:dir(rtl) {
  transform: translateY(25vh);
}"
`;

exports[`getComponentCss() > should return correct css for open: false, backdrop: surface, fullscreen: 'blur', dismissButton: true, hasHeader: true and hasFooter: true 1`] = `
":host {
  display: contents;
  --ref-p-modal-pt: clamp(16px, 1.25vw + 12px, 36px) !important;
  --ref-p-modal-pb: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) !important;
  --ref-p-modal-px: clamp(32px, 2.75vw + 23px, 76px) !important;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  --_a: var(--p-color-surface) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=header] {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: hidden;
  pointer-events: none;
  background: transparent;
  transition: visibility 0s linear var(--p-transition-duration, .4s), background-color var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), -webkit-backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, .4s), background-color var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), -webkit-backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), backdrop-filter var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1), overlay var(--p-transition-duration, .4s) cubic-bezier(.4,0,.5,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  position: relative;
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-top: clamp(16px, 1.25vw + 12px, 36px);
  padding-bottom: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: var(--p-color-primary);
  background: var(--_a);
  opacity: 0;
  transform: translateY(25vh);
  transition: opacity var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1), transform var(--p-transition-duration, .25s) cubic-bezier(.4,0,.5,1);
  width: auto;
  min-width: auto;
  max-width: none;
  place-self: stretch;
  margin: 0;
  border-radius: 0;
}
.modal:dir(rtl) {
  transform: translateY(25vh);
}
.dismiss {
  grid-area: 1/3;
  z-index: 5;
  position: sticky;
  top: clamp(8px, 0.5vw + 6px, 16px);
  margin-top: calc(-1 * clamp(16px, 1.25vw + 12px, 36px) + clamp(8px, 0.5vw + 6px, 16px));
  margin-inline-end: clamp(8px, 0.5vw + 6px, 16px);
  place-self: flex-start flex-end;
}
.dismiss::after {
  content: "";
  display: block;
  position: absolute;
  inset: calc(-1 * clamp(8px, 0.5vw + 6px, 16px)) calc(-1 * clamp(8px, 0.5vw + 6px, 16px)) -50px -50px;
  pointer-events: none;
  z-index: -1;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-xl));
  background: radial-gradient(circle at top right, hsla(from var(--_a) h s l / 0.35) 0%, transparent 70%);
}"
`;

exports[`getComponentCss() > should return correct css for open: true, backdrop: canvas, fullscreen: 'blur', dismissButton: false, hasHeader: false and hasFooter: true 1`] = `
":host {
  display: contents;
  --ref-p-modal-pt: clamp(16px, 1.25vw + 12px, 36px) !important;
  --ref-p-modal-pb: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) !important;
  --ref-p-modal-px: clamp(32px, 2.75vw + 23px, 76px) !important;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  --_a: var(--p-color-canvas) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=header] {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: inherit;
  pointer-events: auto;
  background: var(--p-color-backdrop);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), -webkit-backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), -webkit-backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), overlay var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  position: relative;
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-top: clamp(16px, 1.25vw + 12px, 36px);
  padding-bottom: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: var(--p-color-primary);
  background: var(--_a);
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), transform var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  width: var(--p-modal-width,auto);
  min-width: 276px;
  max-width: 1535.5px;
  place-self: center;
  margin: var(--p-modal-spacing-top,clamp(16px, 10vh, 192px)) max(22px, 10.625vw - 12px) var(--p-modal-spacing-bottom,clamp(16px, 10vh, 192px));
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-xl));
}
@media (forced-colors: active) {
  .modal {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for open: true, backdrop: canvas, fullscreen: 'blur', dismissButton: false, hasHeader: true and hasFooter: false 1`] = `
":host {
  display: contents;
  --ref-p-modal-pt: clamp(16px, 1.25vw + 12px, 36px) !important;
  --ref-p-modal-pb: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) !important;
  --ref-p-modal-px: clamp(32px, 2.75vw + 23px, 76px) !important;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  --_a: var(--p-color-canvas) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: inherit;
  pointer-events: auto;
  background: var(--p-color-backdrop);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), -webkit-backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), -webkit-backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), overlay var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  position: relative;
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-top: clamp(16px, 1.25vw + 12px, 36px);
  padding-bottom: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: var(--p-color-primary);
  background: var(--_a);
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), transform var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  width: var(--p-modal-width,auto);
  min-width: 276px;
  max-width: 1535.5px;
  place-self: center;
  margin: var(--p-modal-spacing-top,clamp(16px, 10vh, 192px)) max(22px, 10.625vw - 12px) var(--p-modal-spacing-bottom,clamp(16px, 10vh, 192px));
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-xl));
}
.dismiss {
  grid-area: 1/3;
  z-index: 5;
  position: sticky;
  top: clamp(8px, 0.5vw + 6px, 16px);
  margin-top: calc(-1 * clamp(16px, 1.25vw + 12px, 36px) + clamp(8px, 0.5vw + 6px, 16px));
  margin-inline-end: clamp(8px, 0.5vw + 6px, 16px);
  place-self: flex-start flex-end;
}
.dismiss::after {
  content: "";
  display: block;
  position: absolute;
  inset: calc(-1 * clamp(8px, 0.5vw + 6px, 16px)) calc(-1 * clamp(8px, 0.5vw + 6px, 16px)) -50px -50px;
  pointer-events: none;
  z-index: -1;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-xl));
  background: radial-gradient(circle at top right, hsla(from var(--_a) h s l / 0.35) 0%, transparent 70%);
}
@media (forced-colors: active) {
  .modal {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for open: true, backdrop: canvas, fullscreen: 'blur', dismissButton: true, hasHeader: false and hasFooter: false 1`] = `
":host {
  display: contents;
  --ref-p-modal-pt: clamp(16px, 1.25vw + 12px, 36px) !important;
  --ref-p-modal-pb: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) !important;
  --ref-p-modal-px: clamp(32px, 2.75vw + 23px, 76px) !important;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  --_a: var(--p-color-canvas) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: inherit;
  pointer-events: auto;
  background: var(--p-color-backdrop);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), -webkit-backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), -webkit-backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), overlay var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  position: relative;
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-top: clamp(16px, 1.25vw + 12px, 36px);
  padding-bottom: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: var(--p-color-primary);
  background: var(--_a);
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), transform var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  width: auto;
  min-width: auto;
  max-width: none;
  place-self: stretch;
  margin: 0;
  border-radius: 0;
}"
`;

exports[`getComponentCss() > should return correct css for open: true, backdrop: canvas, fullscreen: 'blur', dismissButton: true, hasHeader: false and hasFooter: true 1`] = `
":host {
  display: contents;
  --ref-p-modal-pt: clamp(16px, 1.25vw + 12px, 36px) !important;
  --ref-p-modal-pb: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) !important;
  --ref-p-modal-px: clamp(32px, 2.75vw + 23px, 76px) !important;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  --_a: var(--p-color-canvas) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=header] {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: inherit;
  pointer-events: auto;
  background: var(--p-color-backdrop);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), -webkit-backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), -webkit-backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), overlay var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  position: relative;
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-top: clamp(16px, 1.25vw + 12px, 36px);
  padding-bottom: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: var(--p-color-primary);
  background: var(--_a);
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), transform var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  width: auto;
  min-width: auto;
  max-width: none;
  place-self: stretch;
  margin: 0;
  border-radius: 0;
}"
`;

exports[`getComponentCss() > should return correct css for open: true, backdrop: canvas, fullscreen: 'blur', dismissButton: true, hasHeader: true and hasFooter: false 1`] = `
":host {
  display: contents;
  --ref-p-modal-pt: clamp(16px, 1.25vw + 12px, 36px) !important;
  --ref-p-modal-pb: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) !important;
  --ref-p-modal-px: clamp(32px, 2.75vw + 23px, 76px) !important;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  --_a: var(--p-color-canvas) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: inherit;
  pointer-events: auto;
  background: var(--p-color-backdrop);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), -webkit-backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), -webkit-backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), overlay var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  position: relative;
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-top: clamp(16px, 1.25vw + 12px, 36px);
  padding-bottom: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: var(--p-color-primary);
  background: var(--_a);
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), transform var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  width: auto;
  min-width: auto;
  max-width: none;
  place-self: stretch;
  margin: 0;
  border-radius: 0;
}
.dismiss {
  grid-area: 1/3;
  z-index: 5;
  position: sticky;
  top: clamp(8px, 0.5vw + 6px, 16px);
  margin-top: calc(-1 * clamp(16px, 1.25vw + 12px, 36px) + clamp(8px, 0.5vw + 6px, 16px));
  margin-inline-end: clamp(8px, 0.5vw + 6px, 16px);
  place-self: flex-start flex-end;
}
.dismiss::after {
  content: "";
  display: block;
  position: absolute;
  inset: calc(-1 * clamp(8px, 0.5vw + 6px, 16px)) calc(-1 * clamp(8px, 0.5vw + 6px, 16px)) -50px -50px;
  pointer-events: none;
  z-index: -1;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-xl));
  background: radial-gradient(circle at top right, hsla(from var(--_a) h s l / 0.35) 0%, transparent 70%);
}"
`;

exports[`getComponentCss() > should return correct css for open: true, backdrop: surface, fullscreen: 'blur', dismissButton: { base: true, xs: false, s: true, m: false, l: true, xl: false }, hasHeader: true and hasFooter: false 1`] = `
":host {
  display: contents;
  --ref-p-modal-pt: clamp(16px, 1.25vw + 12px, 36px) !important;
  --ref-p-modal-pb: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) !important;
  --ref-p-modal-px: clamp(32px, 2.75vw + 23px, 76px) !important;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  --_a: var(--p-color-surface) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: inherit;
  pointer-events: auto;
  background: var(--p-color-backdrop);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), -webkit-backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), -webkit-backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), overlay var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  position: relative;
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-top: clamp(16px, 1.25vw + 12px, 36px);
  padding-bottom: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: var(--p-color-primary);
  background: var(--_a);
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), transform var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  width: auto;
  min-width: auto;
  max-width: none;
  place-self: stretch;
  margin: 0;
  border-radius: 0;
}
.dismiss {
  grid-area: 1/3;
  z-index: 5;
  position: sticky;
  top: clamp(8px, 0.5vw + 6px, 16px);
  margin-top: calc(-1 * clamp(16px, 1.25vw + 12px, 36px) + clamp(8px, 0.5vw + 6px, 16px));
  margin-inline-end: clamp(8px, 0.5vw + 6px, 16px);
  place-self: flex-start flex-end;
}
.dismiss::after {
  content: "";
  display: block;
  position: absolute;
  inset: calc(-1 * clamp(8px, 0.5vw + 6px, 16px)) calc(-1 * clamp(8px, 0.5vw + 6px, 16px)) -50px -50px;
  pointer-events: none;
  z-index: -1;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-xl));
  background: radial-gradient(circle at top right, hsla(from var(--_a) h s l / 0.35) 0%, transparent 70%);
}
@media(min-width:480px) {
  .modal {
    width: var(--p-modal-width,auto);
    min-width: 276px;
    max-width: 1535.5px;
    place-self: center;
    margin: var(--p-modal-spacing-top,clamp(16px, 10vh, 192px)) max(22px, 10.625vw - 12px) var(--p-modal-spacing-bottom,clamp(16px, 10vh, 192px));
    border-radius: var(--_p-legacy-radius-large, var(--p-radius-xl));
  }
@media (forced-colors: active) {
    .modal {
      outline: 2px solid CanvasText;
      outline-offset: -2px;
    }
}

}

@media(min-width:760px) {
  .modal {
    width: auto;
    min-width: auto;
    max-width: none;
    place-self: stretch;
    margin: 0;
    border-radius: 0;
  }
}

@media(min-width:1000px) {
  .modal {
    width: var(--p-modal-width,auto);
    min-width: 276px;
    max-width: 1535.5px;
    place-self: center;
    margin: var(--p-modal-spacing-top,clamp(16px, 10vh, 192px)) max(22px, 10.625vw - 12px) var(--p-modal-spacing-bottom,clamp(16px, 10vh, 192px));
    border-radius: var(--_p-legacy-radius-large, var(--p-radius-xl));
  }
@media (forced-colors: active) {
    .modal {
      outline: 2px solid CanvasText;
      outline-offset: -2px;
    }
}

}

@media(min-width:1300px) {
  .modal {
    width: auto;
    min-width: auto;
    max-width: none;
    place-self: stretch;
    margin: 0;
    border-radius: 0;
  }
}

@media(min-width:1760px) {
  .modal {
    width: var(--p-modal-width,auto);
    min-width: 276px;
    max-width: 1535.5px;
    place-self: center;
    margin: var(--p-modal-spacing-top,clamp(16px, 10vh, 192px)) max(22px, 10.625vw - 12px) var(--p-modal-spacing-bottom,clamp(16px, 10vh, 192px));
    border-radius: var(--_p-legacy-radius-large, var(--p-radius-xl));
  }
@media (forced-colors: active) {
    .modal {
      outline: 2px solid CanvasText;
      outline-offset: -2px;
    }
}

}
"
`;

exports[`getComponentCss() > should return correct css for open: true, backdrop: surface, fullscreen: 'blur', dismissButton: false, hasHeader: false and hasFooter: false 1`] = `
":host {
  display: contents;
  --ref-p-modal-pt: clamp(16px, 1.25vw + 12px, 36px) !important;
  --ref-p-modal-pb: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) !important;
  --ref-p-modal-px: clamp(32px, 2.75vw + 23px, 76px) !important;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  --_a: var(--p-color-surface) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=footer] {
  grid-column: 1/-1;
  z-index: 2;
  position: sticky;
  bottom: -.1px;
  margin-block: calc(-1 * calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) - var(--_p-legacy-radius-large, var(--p-radius-xl))));
  padding: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) - var(--_p-legacy-radius-large, var(--p-radius-xl))) clamp(32px, 2.75vw + 23px, 76px);
  background: linear-gradient(0deg,var(--_a) 0%,var(--_a) 20%,transparent 80%);
}
slot[name=footer][data-stuck]::after {
  content: "";
  z-index: -1;
  position: absolute;
  inset: calc(calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) - var(--_p-legacy-radius-large, var(--p-radius-xl))) - calc(calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) - var(--_p-legacy-radius-large, var(--p-radius-xl))) / 2)) calc(clamp(32px, 2.75vw + 23px, 76px) - calc(calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) - var(--_p-legacy-radius-large, var(--p-radius-xl))) / 2));
  background: var(--p-color-frosted);
  border-radius: var(--p-radius-3xl);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: inherit;
  pointer-events: auto;
  background: var(--p-color-backdrop);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), -webkit-backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), -webkit-backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), overlay var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  position: relative;
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-top: clamp(16px, 1.25vw + 12px, 36px);
  padding-bottom: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: var(--p-color-primary);
  background: var(--_a);
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), transform var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  width: var(--p-modal-width,auto);
  min-width: 276px;
  max-width: 1535.5px;
  place-self: center;
  margin: var(--p-modal-spacing-top,clamp(16px, 10vh, 192px)) max(22px, 10.625vw - 12px) var(--p-modal-spacing-bottom,clamp(16px, 10vh, 192px));
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-xl));
}
@media (forced-colors: active) {
  .modal {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for open: true, backdrop: surface, fullscreen: 'blur', dismissButton: false, hasHeader: false and hasFooter: true 1`] = `
":host {
  display: contents;
  --ref-p-modal-pt: clamp(16px, 1.25vw + 12px, 36px) !important;
  --ref-p-modal-pb: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) !important;
  --ref-p-modal-px: clamp(32px, 2.75vw + 23px, 76px) !important;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  --_a: var(--p-color-surface) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=header] {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=footer] {
  grid-column: 1/-1;
  z-index: 2;
  position: sticky;
  bottom: -.1px;
  margin-block: calc(-1 * calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) - var(--_p-legacy-radius-large, var(--p-radius-xl))));
  padding: calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) - var(--_p-legacy-radius-large, var(--p-radius-xl))) clamp(32px, 2.75vw + 23px, 76px);
  background: linear-gradient(0deg,var(--_a) 0%,var(--_a) 20%,transparent 80%);
}
slot[name=footer][data-stuck]::after {
  content: "";
  z-index: -1;
  position: absolute;
  inset: calc(calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) - var(--_p-legacy-radius-large, var(--p-radius-xl))) - calc(calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) - var(--_p-legacy-radius-large, var(--p-radius-xl))) / 2)) calc(clamp(32px, 2.75vw + 23px, 76px) - calc(calc(calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) - var(--_p-legacy-radius-large, var(--p-radius-xl))) / 2));
  background: var(--p-color-frosted);
  border-radius: var(--p-radius-3xl);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: inherit;
  pointer-events: auto;
  background: var(--p-color-backdrop);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), -webkit-backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), -webkit-backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), overlay var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  position: relative;
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-top: clamp(16px, 1.25vw + 12px, 36px);
  padding-bottom: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: var(--p-color-primary);
  background: var(--_a);
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), transform var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  width: var(--p-modal-width,auto);
  min-width: 276px;
  max-width: 1535.5px;
  place-self: center;
  margin: var(--p-modal-spacing-top,clamp(16px, 10vh, 192px)) max(22px, 10.625vw - 12px) var(--p-modal-spacing-bottom,clamp(16px, 10vh, 192px));
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-xl));
}
@media (forced-colors: active) {
  .modal {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for open: true, backdrop: surface, fullscreen: 'blur', dismissButton: false, hasHeader: true and hasFooter: true 1`] = `
":host {
  display: contents;
  --ref-p-modal-pt: clamp(16px, 1.25vw + 12px, 36px) !important;
  --ref-p-modal-pb: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) !important;
  --ref-p-modal-px: clamp(32px, 2.75vw + 23px, 76px) !important;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  --_a: var(--p-color-surface) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=header] {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: inherit;
  pointer-events: auto;
  background: var(--p-color-backdrop);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), -webkit-backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), -webkit-backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), overlay var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  position: relative;
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-top: clamp(16px, 1.25vw + 12px, 36px);
  padding-bottom: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: var(--p-color-primary);
  background: var(--_a);
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), transform var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  width: var(--p-modal-width,auto);
  min-width: 276px;
  max-width: 1535.5px;
  place-self: center;
  margin: var(--p-modal-spacing-top,clamp(16px, 10vh, 192px)) max(22px, 10.625vw - 12px) var(--p-modal-spacing-bottom,clamp(16px, 10vh, 192px));
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-xl));
}
.dismiss {
  grid-area: 1/3;
  z-index: 5;
  position: sticky;
  top: clamp(8px, 0.5vw + 6px, 16px);
  margin-top: calc(-1 * clamp(16px, 1.25vw + 12px, 36px) + clamp(8px, 0.5vw + 6px, 16px));
  margin-inline-end: clamp(8px, 0.5vw + 6px, 16px);
  place-self: flex-start flex-end;
}
.dismiss::after {
  content: "";
  display: block;
  position: absolute;
  inset: calc(-1 * clamp(8px, 0.5vw + 6px, 16px)) calc(-1 * clamp(8px, 0.5vw + 6px, 16px)) -50px -50px;
  pointer-events: none;
  z-index: -1;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-xl));
  background: radial-gradient(circle at top right, hsla(from var(--_a) h s l / 0.35) 0%, transparent 70%);
}
@media (forced-colors: active) {
  .modal {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for open: true, backdrop: surface, fullscreen: 'blur', dismissButton: true, hasHeader: true and hasFooter: true 1`] = `
":host {
  display: contents;
  --ref-p-modal-pt: clamp(16px, 1.25vw + 12px, 36px) !important;
  --ref-p-modal-pb: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px)) !important;
  --ref-p-modal-px: clamp(32px, 2.75vw + 23px, 76px) !important;
  --pds-internal-grid-outer-column: calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(16px, 1.25vw + 12px, 36px)) !important;
  --pds-internal-grid-margin: calc(clamp(32px, 2.75vw + 23px, 76px) * -1) !important;
  --pds-internal-grid-width-min: auto !important;
  --pds-internal-grid-width-max: none !important;
  --_a: var(--p-color-surface) !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:first-of-type {
  grid-row-start: 1;
}
slot:not([name]) {
  grid-column: 2/3;
  z-index: 0;
}
slot[name=header] {
  grid-column: 2/3;
  z-index: 0;
}
dialog {
  position: fixed;
  inset: 0;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100dvw;
  height: 100dvh;
  max-width: 100dvw;
  max-height: 100dvh;
  overflow: hidden;
  display: block;
  outline: 0;
  z-index: 9999999;
  visibility: inherit;
  pointer-events: auto;
  background: var(--p-color-backdrop);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), -webkit-backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1);
}
dialog::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  dialog {
    transition: visibility 0s linear var(--p-transition-duration, 0s), background-color var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), -webkit-backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), backdrop-filter var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1), overlay var(--p-transition-duration, .6s) cubic-bezier(0,0,.2,1) allow-discrete;
  }
}

.scroller {
  position: absolute;
  isolation: isolate;
  display: grid;
  inset: 0;
  overflow: hidden auto;
  overscroll-behavior-y: none;
  background: rgba(255,255,255,.01);
}
.modal {
  position: relative;
  display: grid;
  grid-template: auto/clamp(8px, 0.5vw + 6px, 16px) minmax(0,1fr) clamp(8px, 0.5vw + 6px, 16px);
  gap: clamp(16px, 1.25vw + 12px, 36px) calc(clamp(32px, 2.75vw + 23px, 76px) - clamp(8px, 0.5vw + 6px, 16px));
  padding-top: clamp(16px, 1.25vw + 12px, 36px);
  padding-bottom: calc(clamp(8px, 0.5vw + 6px, 16px) + clamp(16px, 1.25vw + 12px, 36px));
  align-content: flex-start;
  color: var(--p-color-primary);
  background: var(--_a);
  opacity: 1;
  transform: initial;
  transition: opacity var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1), transform var(--p-transition-duration, .4s) cubic-bezier(0,0,.2,1);
  width: auto;
  min-width: auto;
  max-width: none;
  place-self: stretch;
  margin: 0;
  border-radius: 0;
}
.dismiss {
  grid-area: 1/3;
  z-index: 5;
  position: sticky;
  top: clamp(8px, 0.5vw + 6px, 16px);
  margin-top: calc(-1 * clamp(16px, 1.25vw + 12px, 36px) + clamp(8px, 0.5vw + 6px, 16px));
  margin-inline-end: clamp(8px, 0.5vw + 6px, 16px);
  place-self: flex-start flex-end;
}
.dismiss::after {
  content: "";
  display: block;
  position: absolute;
  inset: calc(-1 * clamp(8px, 0.5vw + 6px, 16px)) calc(-1 * clamp(8px, 0.5vw + 6px, 16px)) -50px -50px;
  pointer-events: none;
  z-index: -1;
  border-radius: var(--_p-legacy-radius-large, var(--p-radius-xl));
  background: radial-gradient(circle at top right, hsla(from var(--_a) h s l / 0.35) 0%, transparent 70%);
}"
`;
